src/scss/common-components/_nav.scss
.master-navigation {
	padding-top: 24px;

	.row {
		align-items: center;
	}

	.logo-wrap {
		height: 79px;
		display: flex;
		justify-content: center;
		align-items: center;
		overflow: hidden;

		&_images {
			object-fit: cover;
			height: 187px;
		}
	}
	
	.navigation-wrap {
		display: flex;
		justify-content: space-between;
		align-items: center;
		height: 100%;

		.navigation-burger{
			display: none;
			flex-flow: column;
			justify-content: space-between;
			width: 40px;
			height: 32px;
			margin-right: 24px;
			background: none;
			border: none;
			padding: 0;

			&__item{
				display: block;
				height: 2px;
				width: 100%;
				background-color: $primary-color;
			}

			@media (max-width:991px) {
				display: flex;
			}
		}

		.navigation-list {
			padding: 0;
			margin: 0;

			.exit-burger{
				display: none;
			}
			&_items {
				color: $secundary-color-two;
				display: inline-block;
				padding: 0 16px;
				font-weight: 500;
				transition: $animation color;
				cursor: pointer;

				.under-menu {
					position: absolute;
					left: 50%;
					top: 255px;
					width: 800px;
					height: 300px;
					background-color: $white;
					box-shadow: 0px 5px 20px 1px #b3b2b2;
					border-radius: $radius;
					z-index: 2;
					transform: translate(-50%, -60%);
					transition: $animation opacity, $animation z-index, $animation transform;
					z-index: -2;
					opacity: 0;

					.row {
						height: 100%;
					}

					&__left {
						height: 100%;
						position: relative;
						padding: 0;

						&-images {
							height: 100%;
							border-top-left-radius: $radius;
							border-bottom-left-radius: $radius;
						}

						&::after {
							content: "";
							width: 100%;
							height: 100%;
							position: absolute;
							left: 0;
							top: 0;
							border-top-left-radius: $radius;
							border-bottom-left-radius: $radius;
							background-color: rgba($color: $primary-color, $alpha: .7);
						}
					}

					&__right {
						height: 100%;
						padding: 40px 55px;
						cursor: auto;

						&-items {
							list-style-type: square;
							padding-bottom: 8px;
							font-size: .89em;
							padding-left: 10px;
						}
					}

					@media (max-width: 992px){
						position: inherit;
						left: 0;
						top: 0;
						width: inherit;
						height: inherit;
						transform: inherit;
						opacity: 1;
						background-color: inherit;
						box-shadow: inherit;
						border-radius: inherit;

						&__left{
							display: none;
						}

						&__right{
							padding: 0;
						}
					}
				}

				.drop-down{
					transform: translate(-50%, -50%);
					transition: $animation opacity, $animation z-index, $animation transform;
					z-index: 10;
					opacity: 1;

					@media (max-width:992px) {
						transform: inherit;
						z-index: auto;
						opacity: 1;
					}
				}

				&:hover {
					color: $primary-color;
				}

				&__arrow {
					display: flex;
					justify-content: center;
					align-items: center;
					
					&::after {
						content: "";
						display: inline-block;
						background: url(../images/icons/arrow/down-arrow.svg) center center no-repeat;
						background-size: cover;
						width: 11px;
						height: 11px;
						margin: 2px 0 0 8px;
					}

					@media (max-width:992px) {
						display: block;
						padding-bottom: 16px;
					}
				}

				@media (max-width:1200px){
					padding: 0 8px;
				}

				@media (max-width:992px){
					width: 100%;
				}
			}

			@media (max-width:1200px) {
				margin-right: 24px;
			}

			@media (max-width:991px) {
				transform: translate(-50%, -60%);
				position: fixed;
				height: 100%;
				width: 100%;
				right: 0;
				top:0;
				z-index: 2;
				background-color: $gray-light;
				transform: translateX(100%);
				transition: $animation transform;
				padding: 46px;
				border: 16px solid #fff;
				display: flex;
				flex-flow: column;
				align-items: center;
				justify-content: center;
				margin-right: 0;
				overflow-y: scroll;
			}
		}
		.primary-button {
			font-weight: 500;
			@media (max-width:1200px){
				width: 187px;
			}
		}

		@media (max-width:1200px){
			justify-content: flex-end;
		}
	}

	.down-burger{
		.navigation-list{
			transform: translateX(0);
			transition: $animation transform;

			.exit-burger{
				display: block;
				position: absolute;
				right: 5%;
				top: 5%;
				height: 32px;
				width: 32px;
				background: url(../images/nav/close.svg) center center no-repeat;
				background-size: cover;
				padding: 0;
				border: 0;
			}
		}
	}
}

